--- a/section 12/department-microservice/src/main/resources/application.yml
+++ b/section 12/department-microservice/src/main/resources/application.yml
@@ -4,15 +4,15 @@ server:
 spring:
   #rabbitmq:
   #  host: "localhost"
-   # port: 5672
-    #username: "guest"
-    #password: "guest"
+  # port: 5672
+  #username: "guest"
+  #password: "guest"
   profiles:
-    active: "docker" # Add docker profile for container environment
+    active: "default" # Add docker profile for container environment
   config:
     import: optional:configserver:${CONFIG_SERVICE_URL:http://localhost:9999}
   application:
-    name: institut-ms
+    name: institut
 
   datasource:
     url: 'jdbc:h2:mem:depdb;DB_CLOSE_ON_EXIT=FALSE'
@@ -57,4 +57,3 @@ build:
 author:
   name: "manel boulares"
   email: "manelboulares@gmail.com"
-
