--- a/section 12/docker-compose.yml
+++ b/section 12/docker-compose.yml
@@ -1,6 +1,21 @@
 version: '3.8'
 
 services:
+  keycloak:
+    image: quay.io/keycloak/keycloak:26.3.4
+    container_name: keycloak
+    environment:
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin
+    ports:
+      - "8090:8080"
+    command: start-dev
+    networks:
+      - microservices-net
+
+
+
+
   eurekaserver:
     build: ./eurekaserver
     container_name: eurekaserver
@@ -15,8 +30,8 @@ services:
   configserver:
     build: ./configserver
     container_name: configserver
-    ports:
-      - "9999:9999"
+    expose:
+      - "9999"
     networks:
       - microservices-net
     healthcheck:
@@ -26,16 +41,18 @@ services:
   institut-ms:
     build: ./department-microservice
     container_name: institut-ms
-    ports:
-      - "8083:8083"
+    expose:
+      - "8083"
     networks:
       - microservices-net
     environment:
-      - SPRING_APPLICATION_NAME=institut
-      - SPRING_PROFILES_ACTIVE=docker
+     # - SPRING_APPLICATION_NAME=institut
+     # - SPRING_PROFILES_ACTIVE=docker
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eurekaserver:8761/eureka/
       - SPRING_CONFIG_IMPORT=optional:configserver:http://configserver:9999/
-      - EUREKA_INSTANCE_HOSTNAME=institut-ms  # Critical: Set hostname for Eureka
+      - DISCOVERY_SERVICE_URL=http://eurekaserver:8761/eureka
+      - CONFIG_SERVICE_URL=http://configserver:9999
+     # - EUREKA_INSTANCE_HOSTNAME=institut-ms  # Critical: Set hostname for Eureka
     healthcheck:
       test: "curl --fail --silent localhost:8083/actuator/health | grep UP || exit 1"
       interval: 10s
@@ -53,7 +70,8 @@ services:
     networks:
       - microservices-net
     environment:  # CORRECTED ENVIRONMENT VARIABLES
-      - SPRING_PROFILES_ACTIVE=docker
+      - DISCOVERY_SERVICE_URL=http://eurekaserver:8761/eureka
+      #- SPRING_PROFILES_ACTIVE=docker
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eurekaserver:8761/eureka/
       - SPRING_CONFIG_IMPORT=optional:configserver:http://configserver:9999/
     healthcheck:
@@ -68,8 +86,8 @@ services:
   institut-ms2:
     build: ./department-microservice
     container_name: institut-ms2
-    ports:
-      - "8094:8083"
+    expose:
+      - "8094"
     networks:
       - microservices-net
     environment:
@@ -90,12 +108,14 @@ services:
   etudiants-ms:
     build: ./etudiant-microservice
     container_name: etudiants-ms
-    ports:
-      - "8087:8087"
+    expose:
+      - "8097"
     networks:
       - microservices-net
     environment:  # CORRECTED - removed double slash
-      - SPRING_PROFILES_ACTIVE=docker
+      - DISCOVERY_SERVICE_URL=http://eurekaserver:8761/eureka
+      - CONFIG_SERVICE_URL=http://configserver:9999
+      #- SPRING_PROFILES_ACTIVE=docker
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eurekaserver:8761/eureka/
       - SPRING_CONFIG_IMPORT=optional:configserver:http://configserver:9999/
     healthcheck:
@@ -106,9 +126,11 @@ services:
         condition: service_healthy
       configserver:
         condition: service_healthy
-      institut-ms:
-        condition: service_healthy
+
 
 networks:
   microservices-net:
     driver: bridge
+
+volumes:
+  keycloak-data:
